# Family-Smart-Screen

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
.claude/: settings.json  settings.local.json
backend/: CMakeLists.txt
backend/camera_server/: camera_streamer.c  camera_streamer.h  rpc_server.c  v4l2_capture.c  v4l2_capture.h
backend/device_server/: dev_ap3216c.c  dev_ap3216c.h  dev_dht11.c  dev_dht11.h  dev_led.c  dev_led.h  dev_sg90.c  dev_sg90.h  rpc_server.c
backend/voice_server/: rpc_server.c  xiaozhi_bridge.c  xiaozhi_bridge.h
backend/voice_server/xiaozhi/: aplay.cpp  aplay.h  cfg.h  control_center.cpp  http.cpp  http_stub.cpp  ipc_udp.cpp  opus.cpp  opus.h  record.cpp  record.h  sound_app.cpp  uuid.cpp  websocket_client.cpp  websocket_client.h
backend/web_server/: http_server.c  http_server.h  main.c
gui/: CMakeLists.txt  camera_reader.c  camera_reader.h  lv_conf.h  main.c  rpc_client.c  rpc_client.h  xiaozhi_ipc.c  xiaozhi_ipc.h
gui/ui/: ui_album.c  ui_camera.c  ui_device.c  ui_device.h  ui_main.c  ui_main.h  ui_scenes.c  ui_settings.c  ui_voice.c
inc/: camera_shm.h  common.h  rpc_protocol.h
libs/cjson/: CMakeLists.txt
libs/jsonrpc/: CMakeLists.txt
libs/lvgl/env_support/cmake/: custom.cmake
libs/lvgl/tests/src/test_cases/libs/: test_lodepng.c
